# gpustat

./: Cargo.toml  LICENSE  README.md  shell.nix
assets/: gpustat.desktop
src/: main.rs  processes.rs  style.rs  utils.rs
src/data/: graph.rs  mod.rs  process_table.rs
src/gui/: graph.rs  mod.rs  process_table.rs  style.rs
src/panels/: graph.rs  mod.rs  process_table.rs
src/tui/: mod.rs  mod_.rs  views.rs
