[package]
name = "gpustat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
eframe = "0.20.1"
egui_extras = "0.20.0"
nvml-wrapper = "0.9.0"
nvml-wrapper-sys = "0.7.0"
ratatui = "0.21.0"
sysinfo = "0.29.2"
