[package]
name = "gpustat"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
eframe = "0.26.2"
egui_extras = "0.26.2"
image = { version = "0.24.7", default-features = false, features = ["png"] }
nvml-wrapper = "0.10.0"
nvml-wrapper-sys = "0.8.0"
ratatui = "0.26.1"
sysinfo = "0.30.5"
